fix letter spacing

--- a/src/styles/global.less
+++ b/src/styles/global.less
@@ -59,7 +59,6 @@ nav {
 
 main {
   min-height: calc(100dvh - 100px);
-  letter-spacing: 0.5px;
   padding: 0 0.625rem;
 
   &::-webkit-scrollbar {
